# mcpx

./: .dockerignore  .gitignore  AUTHENTICATION.md  DEPLOYMENT.md  Dockerfile  GETTING_STARTED.md  INSTALL.md  PRD.md  README.md  env.example  pyproject.toml  pytest.ini  requirements.txt  set-env.sh  test_mcp_tools.py
app/: auth.py  config.py  main.py  mcp_server.py  request_logger.py  routes.py
app/templates/: index.html  logs.html
deployment/: CHECKLIST.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  deploy.sh  install.sh  mcpx.lol.nginx.conf  mcpx.service  nginx.conf  production.env.example  setup.sh  systemd.service  update.sh  verify-config.sh
docs/: mcpx-prd.md
mcp_server/: config.py  main.py  server.py
mcp_server/auth/: __init__.py  database.py  middleware.py  oauth.py  utils.py
mcp_server/tools/: echo.py  ip_lookup.py  request_info.py  weather.py  web_search.py
src/: __init__.py  main.py  server.py
src/auth/: middleware.py  oauth.py  utils.py
src/tools/: __init__.py
tests/: __init__.py  test_auth.py  test_server.py  test_tools.py
web/mcpx.lol/: index.html  script.js  styles.css
