[project]
name = "mcpxlol"
version = "0.1.0"
description = "a demo MCP server with tool poisoning and poisoned tool output using ASCII smuggling"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.121.3",
    "fastmcp>=2.13.1",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "pydantic>=2.12.4",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.20",
    "uvicorn>=0.38.0",
]
